# UNet-Studio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  console.cpp  console.h  cuda.cu  evaluate.cpp  evaluate.hpp  icons.qrc  install_cuda.bat  install_win.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_evaluation.cpp  mainwindow_training.cpp  options.txt  optiontablewidget.cpp  optiontablewidget.hpp  postproc.txt  qc.cpp  train.cpp  train.hpp  unet-studio.icns  unet.cpp  unet.hpp  unet_studio.rc  visual_perception_augmentation.cpp  visual_perception_augmentation.cu
.github/workflows/: build_unetstudio.yml
build_packages/: install_zlib.bat
build_packages/centos7/: Dockerfile
build_packages/docker/: Dockerfile
build_packages/ubuntu2004/: Dockerfile
build_packages/ubuntu2204/: Dockerfile
build_packages/ubuntu2404/: Dockerfile
